<resources>
    <string name="app_name">Bolt Scrum</string>
    <string name="title_home">Home</string>
    <string name="title_lottery">Lottery</string>
    <string name="title_team">Team</string>
    <string name="title_parameters">Parameters</string>

    <!-- Strings for the Home fragment -->
    <string name="home_message">Click the <b>START MEETING</b> button to start the meeting !</string>
    <string name="home_start_meeting_button">Start Meeting</string>

    <!-- Strings for the lottery fragment -->
    <string name="lottery_message">Click the <b>LOTTERY</b> button to select a random first participant !</string>
    <string name="lottery_button">Lottery</string>

    <!-- Strings for the Team fragment -->
    <string name="team_add_member_button">Add new member</string>

    <!--  -->
    <string name="add_member_dialog_add_placeholder">Enter the member\'s full name</string>
    <string name="add_member_dialog_add_button">Add</string>

    <!-- Strings for the Parameters fragment -->
    <string name="parameters_fragment_message">Welcome on the Parameters Page !</string>

    <!-- Strings for the Meeting activity -->
    <string name="meeting_next_participant_button">Next</string>
    <string name="meeting_end_meeting_button">Finish</string>
    <string name="meeting_total_time_label">Total time :</string>
    <string name="meeting_participant_number_label">Participant n°</string>

    <!-- Strings for the Meeting report activity -->
    <string name="meeting_report_title">Meeting report</string>
    <string name="meeting_report_back_to_home_button">Back to home</string>
    <string name="meeting_report_participants_number_label">Number of participants</string>
    <string name="meeting_report_total_time_label">Total meeting time</string>
    <string name="meeting_report_average_time_label">Average time per participant</string>

</resources>
